Add backtrace to tsts

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-  
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -13,9 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RUSTFLAGS: "-Ctarget-cpu=sandybridge -Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"
+      RUST_BACKTRACE: full
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose --target-dir build
-    - name: Run tests
-      run: cargo test --verbose --target-dir test
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --verbose --target-dir build
+      - name: Run tests
+        run: cargo test --verbose --target-dir test
