Update babel deps

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Web KeePass application",
     "main": "js/scripts/app.js",
     "scripts": {
-        "dev": "./node_modules/.bin/browserify -t browserify-css -t [ babelify --presets [ env react ] ] js/scripts/app.js -o public/scripts/bundle.js; sed -i 's/node_modules\\/bootstrap\\/dist/assets/g' public/scripts/bundle.js",
-        "watch": "./node_modules/.bin/watchify -t browserify-css -t [ babelify --presets [ env react ] ] js/scripts/app.js -o public/scripts/bundle.js & sed -i 's/node_modules\\/bootstrap\\/dist/assets/g' public/scripts/bundle.js",
-        "build": "NODE_ENV=production ./node_modules/.bin/browserify -t browserify-css -p [ minifyify --no-map ] -t [ babelify --presets [ env react ] ] js/scripts/app.js -o public/scripts/bundle.js; sed -i 's/node_modules\\/bootstrap\\/dist/assets/g' public/scripts/bundle.js"
+        "dev": "./node_modules/.bin/browserify -t browserify-css -t babelify js/scripts/app.js -o public/scripts/bundle.js; sed -i 's/node_modules\\/bootstrap\\/dist/assets/g' public/scripts/bundle.js",
+        "watch": "./node_modules/.bin/watchify -t browserify-css -t babelify js/scripts/app.js -o public/scripts/bundle.js & sed -i 's/node_modules\\/bootstrap\\/dist/assets/g' public/scripts/bundle.js",
+        "build": "NODE_ENV=production ./node_modules/.bin/browserify -t browserify-css -p [ minifyify --no-map ] -t js/scripts/app.js -o public/scripts/bundle.js; sed -i 's/node_modules\\/bootstrap\\/dist/assets/g' public/scripts/bundle.js"
     },
     "repository": {
         "type": "git",
@@ -21,10 +21,10 @@
         "url": "https://github.com/lixmal/keepass4web-rs/issues"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
-        "babelify": "^8.0.0",
+        "@babel/core": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-react": "^7.22.15",
+        "babelify": "^10.0.0",
         "browserify": "^17.0.0",
         "browserify-css": "^0.15.0",
         "core-js": "^3.33.0",
