--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,11 @@ serde_path_to_error = "0.1.14"
 aes-gcm = { version = "0.10.3", features = ["zeroize", "std"] }
 constant_time_eq = "0.3.0"
 linux-keyutils = { version = "0.2.3", features = ["std"] }
+url = { version = "2.4.1", features = ["serde"] }
+openidconnect = "3.4.0"
+async-trait = "0.1.74"
+once_cell = "1.18.0"
+lazy_static = { version = "1.4.0", features = [] }
 
 [dev-dependencies]
 clippy = "0.0.302"
