--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
         "bootstrap": "^3.4.1",
         "classnames": "^2.3.2",
         "clipboard-polyfill": "^2.8.6",
-        "history": "^3.3.0",
         "jquery": "^3.7.1",
-        "react": "~15.7.0",
-        "react-dom": "~15.7.0",
-        "react-router": "3.0.0"
+        "react": "^16.0.0",
+        "react-dom": "^16.0.0",
+        "react-router-dom": "^6.0.0"
     },
     "browserify-css": {
         "autoInject": true,
