--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ actix-server = "2.3.0"
 actix-files = "0.6.2"
 actix-web = "4"
 actix-session = { version = "0.8.0", features = ["cookie-session"] }
-tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 serde_yaml = "0.9.25"
