--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ actix-files = "0.6.2"
 actix-web = "4"
 actix-session = { version = "0.8.0", features = ["cookie-session"] }
 tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
+tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 serde_yaml = "0.9.25"
