--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@
 ##################################
 
 # where to get keepass database from
-# use 'Filesystem' for a simple file in the local filesystem
+# available: Filesystem, Http
 db_backend: 'Filesystem'
 
 # backend to authenticate users before anything else
@@ -13,11 +13,20 @@ auth_backend: 'None'
 
 ### Database backends ###
 
-# file specific configuration, db_backend = 'Filesystem'
+# filesystem specific configuration, db_backend = 'Filesystem'
 Filesystem:
     db_location: './db.kdbx'
     # optional, storing key files on the filesystem is not recommended
     # keyfile_location: './db.key'
+
+# http specific configuration, db_backend = 'Http'
+Http:
+    # database_url: ''
+    # keyfile_url: ''
+    # credentials:
+    #   username: ''
+    #   password: ''
+    # bearer: ''
 
 ### Authentication backends ###
 
