--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ ldap3 = { version = "0.11.3", default-features = false, features = ["tls-rustls"
 reqwest = { version = "0.11.22", features = ["rustls", "__tls", "rustls-tls", "stream", "webpki-roots", "rustls-tls-webpki-roots"], default-features = false }
 futures = "0.3.28"
 futures-util = { version = "0.3.29", default-features = false, features = ["io"] }
+htpasswd-verify = "0.3.0"
 
 [dev-dependencies]
 clippy = "0.0.302"
