--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -27,6 +27,11 @@ jobs:
         uses: docker/metadata-action@9dc751fe249ad99385a2583ee0d084c400eee04e
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=sha
+            latest
 
       - name: Build and push Container image
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56
